fixed the carousel gap in homepage

--- a/eisfabrik/src/components/styles/CardsCarousel.module.css
+++ b/eisfabrik/src/components/styles/CardsCarousel.module.css
@@ -1,6 +1,5 @@
 .card {
   height: rem(440px);
-  width: 30vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
